--- a/cep_api_two/Gemfile
+++ b/cep_api_two/Gemfile
@@ -51,6 +51,8 @@ gem 'rails-i18n', '~> 7.0', '>= 7.0.9'
 gem 'bcrypt', '~> 3.1', '>= 3.1.20'
 gem 'jwt', '~> 2.8', '>= 2.8.1'
 
+gem 'httparty'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri mingw x64_mingw]
