--- a/cep_api_two/Gemfile
+++ b/cep_api_two/Gemfile
@@ -44,6 +44,7 @@ gem 'rubocop-rspec', '~> 2.29', '>= 2.29.1'
 
 gem 'rspec', '~> 3.13'
 gem 'rspec-rails'
+gem 'shoulda-matchers'
 
 # CONFIGURAÇÃO PARA TRADUZIR
 gem 'rails-i18n', '~> 7.0', '>= 7.0.9'
